# School-Landing-Site

./: .gitignore  README.md  index.html  metadata.json
Text Book download script/: clean_urdu.py  download_textbooks.py  pyproject.toml  textbook_links.md
Text Book download script/textbook_downloader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scratch/: parse_textbooks.js
src/: App.tsx  index.css
src/components/: About.tsx  AcademicsAdmissions.tsx  Fees.tsx  FloatingButtons.tsx  Footer.tsx  Gallery.tsx  Hero.tsx  MapSection.tsx  Materials.tsx  Navbar.tsx  NewsContact.tsx  Stats.tsx  Testimonials.tsx
